432		Eliminate signed/unsigned mismatch in CK2Version
433		Autogenerated tags must be three characters long
434		Added tag 0.8A Release for changeset 99d3aaaf9719
435		Centralization slider
436		Merge main into mod
437		Update converter mod
438		Aristocracy/Plutocracy slider
439		Update converter mod with new empires
440		Innovative/Narrowminded slider
441		Serfdom/Freesubjects slider
442		Mercantilism/Freetrade slider
443		Land/Naval slider
444		Quality/Quantity slider
445		Offensive/Defensive slider
446		Update for 1.10 titles, including horde mechanics for Mongol empire
447		Fix primogeniture and ultimogeniture succession
448		Put advisers in correct tech groups
449		Merge bugfixesinto main
450		Merge minor into main
451		Merge mod into main
452		Resolve merge issues
453		Add new files from 439 into repository
454		Converter mod fixes
455		Build and test script automatically zips up test results
456		More improvements to converter mod
457		Added tag 0.9 Release for changeset 8c5b60d89cf0
458		Don't add meaningless localizations
459		Added support for missing preference entry types (mostly - one requires further work)
		Added support for saving configuration.txt to disk
460		Completed configuration file support.
		Saves configuration file to disk.
		Asyncrously executes converter process.
		Added logging functionality to give the user some more feedback
		Hid the summary view due to logical user interface inconsistency. Might reintroduce later.
		Completed preferencetype/xml reading refactor.
461		Added Source column to log.
		Logging/conversion is actually usable, but is effectively synchronous.
462		Added working (but not very fancy) asynchronous running of the converter.
		Various bugfixes.
		Automatically finds the converter .exe if stored in the same directory as the UI executable.
		Culture-setting bugfix - the timestamps in the log are no longer hardcoded to american date format.
		Various other minor fixes.
463		Initial code for CK2 mod support